<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encryptor.PinEncryptorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/encrypt_pin_title_screen"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/encryptor_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_using_pan"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pin_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pin_hint"
                android:inputType="numberSigned"
                android:lines="1"
                android:maxLength="12"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/encryptor_linear_layout"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/generate_clear_pin_block_button"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@color/colorAccent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clear_pin_block_text"
        android:layout_width="0dp"
        android:lines="2"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/encryptor_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/generate_button"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/your_clear_pin_block_is_s" />
</androidx.constraintlayout.widget.ConstraintLayout>